<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Halal Food Master</string>
    <string name="google_map_api_key">AIzaSyCREqHFu9GW1WE2fJgjagHZPenTl5KUxJ0</string>
    <string name="facebook_app_id">238960619212995</string>
    <string name="fb_login_protocol_scheme">fb238960619212995</string>
    <string name="facebook_client_token">21f527469fed1157c83714c0ffae31f8</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account_lbl">Create A New Account</string>
    <string name="normal_lbl">Normal</string>
    <string name="business_lbl">Business</string>
    <string name="name_lbl">Name</string>
    <string name="email_lbl">Email</string>
    <string name="termsConditionsLbl"><font color='#000000'>I agree to the</font> <font color='#e21419'>terms &amp; conditions</font></string>
    <string name="newToHfm">New to HFM? </string>
    <string name="signUp">Sign Up</string>
    <string name="oldToHfm"><font color='#000000'>Already have an HFM account?</font> <font color='#e21419'><b>Sign In</b></font></string>
    <string name="shippingEnquiry">To inquire about shipping availability for international orders, Kindly reach out to our support.</string>
    <string name="receiveOtp">Dont receive OTP?</string>
    <string name="resendOtp">Resend Again</string>
    <string name="send_otp_lbl">Send OTP</string>
    <string name="login_with_facebook_lbl">Login with Facebook</string>
    <string name="login_with_google_lbl">Login with Google</string>
    <string name="company_name_lbl">Company Name</string>
    <string name="company_register_no_lbl">Company Register No.</string>
    <string name="nature_of_business_lbl">Nature of Business</string>
    <string name="company_contact_no_lbl">Company Contact No.</string>
    <string name="verify_lbl">Verify</string>
    <string name="otp_verification_lbl">OTP Verification</string>
    <string name="create_password_lbl">Create Password</string>
    <string name="companyBillingAddress">Company Billing Address</string>
    <string name="password_lbl">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_lbl">Register</string>
    <string name="address_lbl">Address</string>
    <string name="login_lbl">Login</string>
    <string name="forgot_password_lbl">Forgot Password?</string>
    <string name="back_lbl">Back</string>
    <string name="send_reset_link_lbl">Send Reset Link</string>
    <string name="reset_password_lbl">Reset Password</string>
    <string name="my_account_lbl">My Account</string>
    <string name="my_orders_lbl">My Orders</string>
    <string name="view_all_lbl">View All</string>
    <string name="to_pay_lbl">To Pay</string>
    <string name="to_ship_lbl">To Ship</string>
    <string name="to_receive_lbl">To Receive</string>
    <string name="bulk_orders_lbl">Bulk Orders</string>
    <string name="manage_address_lbl">Manage Address</string>
    <string name="my_wishlist_lbl">My WishList</string>
    <string name="walletLbl">Wallet</string>
    <string name="pointsLbl">Points</string>
    <string name="walletCashLbl">Wallet Cash</string>
    <string name="vouchersLbl">Vouchers</string>
    <string name="chatLbl">Chat</string>
    <string name="hfmSupportLbl">HFM Support</string>
    <string name="supportLbl">Support</string>
    <string name="referralLbl">Referral</string>
    <string name="logoutLbl">Logout</string>
    <string name="productListLbl">Product List</string>
    <string name="popularityLbl">Popularity</string>
    <string name="newestLbl">Newest</string>
    <string name="lowPriceLbl">Low Price</string>
    <string name="highPriceLbl">High Price</string>
    <string name="filterLbl">Filter</string>
    <string name="priceLbl">Price</string>
    <string name="applyLbl">Apply</string>
    <string name="cancelLbl">Cancel</string>
    <string name="product_detailsLbl">Product Details</string>
    <string name="check_shipping_availabilityLbl">Check Shipping Availability</string>
    <string name="checkLbl">Check</string>
    <string name="pincodeLbl">Pincode</string>
    <string name="totalLbl">Total</string>
    <string name="totalSemiColonLbl">Total:</string>
    <string name="add_to_cart_lbl">Add to Cart</string>
    <string name="visit_store_lbl">Visit Store</string>
    <string name="descriptionsLbl">Descriptions</string>
    <string name="largeText">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. It is also used to temporarily replace text in a process called greeking, which allows designers to consider the form of a webpage or publication, without the meaning of the text influencing the design.</string>
    <string name="largeTextDouble">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. It is also used to temporarily replace text in a process called greeking, which allows designers to consider the form of a webpage or publication, without the meaning of the text influencing the design.In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. It is also used to temporarily replace text in a process called greeking, which allows designers to consider the form of a webpage or publication, without the meaning of the text influencing the design.In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. It is also used to temporarily replace text in a process called greeking, which allows designers to consider the form of a webpage or publication, without the meaning of the text influencing the design.In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. It is also used to temporarily replace text in a process called greeking, which allows designers to consider the form of a webpage or publication, without the meaning of the text influencing the design.In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. It is also used to temporarily replace text in a process called greeking, which allows designers to consider the form of a webpage or publication, without the meaning of the text influencing the design.In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. It is also used to temporarily replace text in a process called greeking, which allows designers to consider the form of a webpage or publication, without the meaning of the text influencing the design.</string>
    <string name="view_more_lbl">View More</string>
    <string name="view_less_lbl">View Less</string>
    <string name="specificationsLbl">Specifications</string>
    <string name="reviewLbl">Review</string>
    <string name="from_the_same_shop_lbl">From The Same Shop</string>
    <string name="use_now_lbl">Use Now</string>
    <string name="storeLbl">Store</string>
    <string name="bulk_order_lbl">Bulk Order</string>
    <string name="customer_reviews_lbl">Customer Reviews</string>
    <string name="rate_product_lbl">Rate Product</string>
    <string name="allLbl">All</string>
    <string name="delivery_address_lbl">Delivery Address</string>
    <string name="sendLbl">Send</string>
    <string name="remarksLbl">Remarks</string>
    <string name="searchLbl">Search</string>
    <string name="search_in_store_lbl">Search in store</string>
    <string name="followLbl">Follow</string>
    <string name="store_vouchers_lbl">Store Vouchers</string>
    <string name="productsLbl">Products</string>
    <string name="ratingsLbl">Ratings</string>
    <string name="stateLbl">State</string>
    <string name="countryLbl">Country</string>
    <string name="highlightLbl">Highlight</string>
    <string name="wishlistLbl">Wishlist</string>
    <string name="unfollowLbl">Unfollow</string>
    <string name="cartLbl">Cart</string>
    <string name="cart_details_lbl">Cart Details</string>
    <string name="deleteLbl">Delete</string>
    <string name="checkoutLbl">Checkout</string>
    <string name="shop_voucher_lb">Shop Voucher</string>
    <string name="platform_voucher_lbl">Platform Voucher</string>
    <string name="addLbl">Add</string>
    <string name="use_points_balance_lbl">Use Points Balance</string>
    <string name="delivery_charge_lbl">Delivery Charge</string>
    <string name="voucherLbl">Voucher</string>
    <string name="bill_details_lbl">Bill Details</string>
    <string name="ok">ok</string>
    <string name="variantsLbl">Variants</string>
    <string name="confirmLbl">Confirm</string>
    <string name="no_default_address_found_please_add_address_lbl">No default address found. Please add address.</string>
    <string name="add_new_address_lbl">+ Add New Address</string>
    <string name="add_new_address_lbl2">Add New Address</string>
    <string name="standard_delivery_lbl">Standard Delivery</string>
    <string name="order_total_lbl">Order Total</string>
    <string name="place_order_lbl">Place Order</string>
    <string name="nameLbl">Name</string>
    <string name="mobile_number_lbl">Mobile Number</string>
    <string name="house_no_block_floor_lbl">House No. / Block / Floor</string>
    <string name="building_street_name_lbl">Building / Street Name</string>
    <string name="cityLbl">City</string>
    <string name="postcodeLbl">Postcode</string>
    <string name="address_type">Address Type</string>
    <string name="homeLbl">Home</string>
    <string name="office">Office</string>
    <string name="set_as_default_lbl">Set as Default</string>
    <string name="save">Save</string>
    <string name="deliver_to_lbl">Deliver To</string>
    <string name="select_store_voucher_lbl">Select Store Voucher</string>
    <string name="flash_deals_lbl">Flash Deals</string>
    <string name="official_brands_store_lbl">Official Brands Store</string>
    <string name="current_balance_lbl">Current Balance</string>
    <string name="no_support_ticket_found_lbl">No Support Ticket found</string>
    <string name="you_currently_have_no_support_tickets_lbl">You currently have no support tickets</string>
    <string name="create_new_ticket_lbl">Create New Ticket</string>
    <string name="create_new_chat">Create New Chat</string>
    <string name="ticket_type_lbl">Ticket Type</string>
    <string name="upload_images_lbl">Upload Images</string>
    <string name="browse_images_lbl">Browse Images</string>
    <string name="messageLbl">Message</string>
    <string name="notificationsLbl">Notifications</string>
    <string name="notAvailable">Not Available</string>
    <string name="account_settings_lbl">Account Settings</string>
    <string name="date_of_birth_lbl">Date Of Birth</string>
    <string name="skipLbl">Skip</string>
    <string name="referral_code_optional_lbl">Referral Code (Optional)</string>
</resources>