<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context=".ui.loginSignUp.register.RegisterFragment">


    <EditText
        android:id="@+id/name"
        style="@style/textMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/edt_box"
        android:gravity="start"
        android:cursorVisible="true"
        android:hint="@string/name_lbl"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        style="@style/textMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/edt_box"
        android:gravity="start"
        android:hint="@string/email_lbl"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

  <EditText
        android:id="@+id/referral"
        style="@style/textMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/edt_box"
        android:gravity="start"
        android:hint="@string/referral_code_optional_lbl"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <CheckBox
        android:id="@+id/termsAndConditionsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:padding="0dp"
        android:textFontWeight="500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/referral" />


    <TextView
        android:id="@+id/termsAndConditions"
        style="@style/textMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/termsConditionsLbl"
        app:layout_constraintBottom_toBottomOf="@id/termsAndConditionsCheckBox"
        app:layout_constraintStart_toEndOf="@+id/termsAndConditionsCheckBox"
        app:layout_constraintTop_toTopOf="@id/termsAndConditionsCheckBox" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendOtp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:backgroundTint="@color/red"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/send_otp_lbl"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="600"
        android:textSize="@dimen/_12ssp"
        app:cornerRadius="@dimen/_6sdp"
        app:layout_constraintTop_toBottomOf="@id/termsAndConditions"
        tools:ignore="UnusedAttribute" />


    <TextView
        android:id="@+id/alreadyHaveAccount"
        style="@style/textMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/oldToHfm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendOtp" />




    <TextView
        android:id="@+id/facebook"
        style="@style/textMediumSemiBold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/edt_box"
        android:drawableStart="@drawable/facebook"
        android:drawableEnd="@drawable/ic_keyboard_arrow_black"
        android:drawablePadding="@dimen/_15sdp"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/_10sdp"
        android:text="@string/login_with_facebook_lbl"
        app:layout_constraintTop_toBottomOf="@id/alreadyHaveAccount" />

    <TextView
        android:id="@+id/google"
        style="@style/textMediumSemiBold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:background="@drawable/edt_box"
        android:drawableStart="@drawable/google"
        android:drawableEnd="@drawable/ic_keyboard_arrow_black"
        android:drawablePadding="@dimen/_15sdp"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/_10sdp"
        android:text="@string/login_with_google_lbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facebook"
        app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>