<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    android:paddingHorizontal="@dimen/_15sdp"
    tools:context=".ui.loginSignUp.password.CreatePasswordFragment">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_160sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/titleLbl"
        style="@style/textLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_password_lbl"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <EditText
        android:id="@+id/password"
        style="@style/textMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_box"
        android:gravity="start"
        android:hint="@string/password_lbl"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLbl"
         />

    <EditText
        android:id="@+id/confirmPassword"
        style="@style/textMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_box"
        android:gravity="start"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
         />




    <com.google.android.material.button.MaterialButton
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:backgroundTint="@color/red"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/register_lbl"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="600"
        android:textSize="@dimen/_12ssp"
        app:cornerRadius="@dimen/_6sdp"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword"
        tools:ignore="UnusedAttribute" />


    <TextView
        android:id="@+id/alreadyHaveAccount"
        style="@style/textMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/oldToHfm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register" />


</androidx.constraintlayout.widget.ConstraintLayout>