<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    android:paddingHorizontal="@dimen/_15sdp"
    tools:context=".ui.loginSignUp.register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/skipLbl"
            style="@style/textMediumSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skipLbl"
            android:textColor="@color/red"
            android:padding="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:drawableEnd="@drawable/skip_arrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_160sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/loginLbl"
            style="@style/textLargeSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_lbl"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



        <EditText
            android:id="@+id/email"
            style="@style/textMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/edt_box"
            android:gravity="start"
            android:hint="@string/email_lbl"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginLbl" />

        <EditText
            android:id="@+id/password"
            style="@style/textMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edt_box"
            android:gravity="start"
            android:hint="@string/password_lbl"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />



        <com.google.android.material.button.MaterialButton
            style="@style/textMediumSemiBold"
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:backgroundTint="@color/red"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/login_lbl"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_6sdp"
            app:layout_constraintTop_toBottomOf="@id/password"
            />


        <TextView
            android:id="@+id/forgotPassword"
            style="@style/textMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/forgot_password_lbl"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <TextView
            android:id="@+id/newToHFM"
            style="@style/textMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/newToHfm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

        <TextView
            android:id="@+id/facebook"
            style="@style/textMedium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/edt_box"
            android:drawableStart="@drawable/facebook"
            android:drawableEnd="@drawable/ic_keyboard_arrow_black"
            android:drawablePadding="@dimen/_15sdp"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/login_with_facebook_lbl"
            app:layout_constraintTop_toBottomOf="@id/newToHFM" />

        <TextView
            android:id="@+id/google"
            style="@style/textMedium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:background="@drawable/edt_box"
            android:drawableStart="@drawable/google"
            android:drawableEnd="@drawable/ic_keyboard_arrow_black"
            android:drawablePadding="@dimen/_15sdp"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/login_with_google_lbl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/facebook"
            app:layout_constraintVertical_bias="0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
